Twitter Card 更新
些細な修正

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@_a_00__">
     <meta name="twitter:title" content="A-00 | 配信者 兼 個人開発者">
-    <meta name="twitter:description" content="配信者向けツールを開発しています">
+    <meta name="twitter:description" content="ゲーム配信やツール開発をしています">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://a-00-manufacturer.github.io/developer-info/">
